Fix sonar cloud